wip -- add URI support